<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChoiceActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/choice_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choicetextview_value" />

        <Button
            android:id="@+id/transfert_choice_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transfert_choice_btn" />

        <Button
            android:id="@+id/withdraw_choice_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/withdraw_choice_btn" />

        <Button
            android:id="@+id/deposit_choice_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deposit_choice_btn" />

        <Button
            android:id="@+id/balance_choice_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/balance_choice_btn" />

        <Button
            android:id="@+id/transactions_choice_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transactions_choice_btn" />

        <Button
            android:id="@+id/exit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_btn" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>