<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransfertActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/transfert_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aref_ruqaa"
            android:text="@string/transfert_textview_value"
            android:textColor="@color/purple_700"
            android:textSize="48sp" />

        <EditText
            android:id="@+id/recipient_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Recipient Number"
            android:inputType="text" />

        <EditText
            android:id="@+id/transfer_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Amount"
            android:inputType="text" />

        <Button
            android:id="@+id/transfer_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transfer_btn_val" />

        <Button
            android:id="@+id/back_btn_transfert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_btn" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>